Formats LSTM candidate cell state equation
Formats the equation for the candidate cell state in the LSTM
section for improved readability.

--- a/assignment/2025.08.19.md
+++ b/assignment/2025.08.19.md
@@ -1,4 +1,4 @@
-### 🧠 CNN, RNN, and LSTM: Basic Concepts and Mathematical Foundations
+# 🧠 CNN, RNN, and LSTM: Basic Concepts and Mathematical Foundations
 
 
 ## 📌 Convolutional Neural Networks (CNN)
@@ -54,7 +54,14 @@ $$f_t = \sigma(W_f \cdot [h_{t-1}, x_t] + b_f)$$
 $$i_t = \sigma(W_i \cdot [h_{t-1}, x_t] + b_i)$$  
 
 - Candidate cell state:  
-$$\tilde{C}_t = \tanh(W_C \cdot [h_{t-1}, x_t] + b_C)$$  
+$$\[
+\tilde{C}_t = \tanh \left( W_C 
+\begin{bmatrix} 
+h_{t-1} \\ 
+x_t 
+\end{bmatrix} 
++ b_C \right)
+\]$$
 
 - Cell state update:  
 $$C_t = f_t * C_{t-1} + i_t * \tilde{C}_t$$  
