--- a/assignment/2025.08.19.md
+++ b/assignment/2025.08.19.md
@@ -1,190 +1,248 @@
-# 🧠 CNN, RNN, and LSTM: Basic Concepts and Mathematical Foundations
+## Assignment 1: Mathematical Foundations
 
+### **Problem 1: Linear Algebra - Neural Network Layer Transformation**
 
-## 📌 Convolutional Neural Networks (CNN)
-
-CNNs are primarily designed for **grid-structured data** (e.g., images).  
-They leverage convolution operations to capture **local spatial patterns**.  
-
-**Key equation (1D convolution):**
+Consider a single layer in a neural network that takes a 3-dimensional input vector and produces a 2-dimensional output vector. The input vector is given by $x$:
 
 $$
-h_{i} = \sigma\left(\sum_{j=0}^{k-1} w_{j} \cdot x_{i+j} + b \right)
+x = \begin{pmatrix} 2 \\ -1 \\ 3 \end{pmatrix}
 $$
 
-- $x$: input  
-- $w$: kernel/filters  
-- $b$: bias  
-- $\sigma$: activation function (e.g., ReLU, sigmoid)  
-
-CNNs excel in tasks like **image classification, object detection, and NLP with word embeddings**.
-
-
-
-## 🔄 Recurrent Neural Networks (RNN)
-
-RNNs are designed for **sequential data** (e.g., text, speech, time-series).  
-They maintain a **hidden state** that propagates through time steps, allowing the model to capture temporal dependencies.  
-
-**Key equation:**
+The weights of the layer are represented by the matrix $W$:
 
 $$
-h_t = \tanh(W_{xh}x_t + W_{hh}h_{t-1} + b_h)
+W = \begin{pmatrix} 0.5 & 1.0 & -0.2 \\ -1.5 & 0.1 & 2.0 \end{pmatrix}
 $$
 
-- $x_t$: input at time $t$  
-- $h_{t-1}$: hidden state from previous step  
-- $W_{xh}, W_{hh}$: weight matrices  
-- $b_h$: bias  
-
-The main limitation is **vanishing/exploding gradients**, which makes it hard to capture long-term dependencies.
-
-
-
-## ⏳ Long Short-Term Memory (LSTM)
-
-LSTMs were introduced to overcome the limitations of vanilla RNNs by adding **gates** that control the flow of information.  
-
-**Key equations:**
-
-- Forget gate:  
-$$f_t = \sigma(W_f \cdot [h_{t-1}, x_t] + b_f)$$
-
-- Input gate:  
-$$i_t = \sigma(W_i \cdot [h_{t-1}, x_t] + b_i)$$  
-
-- Cell state update:  
-$$C_t = f_t * C_{t-1} + i_t * \tilde{C}_t$$  
-
-- Output gate:  
-$$o_t = \sigma(W_o \cdot [h_{t-1}, x_t] + b_o)$$  
-
-- Hidden state:  
-$$h_t = o_t * \tanh(C_t)$$  
-
-These gating mechanisms allow LSTMs to **retain long-term dependencies** effectively.
-
-
-
-## 📘 Assignment: Analysis of "Quantum-Enhanced Kernel Methods for Stochastic Differential Equations" (arXiv:2508.12861)
-
-
-### 🔎 Overview
-This paper explores how **quantum kernel methods** can be applied to **Stochastic Differential Equations (SDEs)**, providing both a theoretical foundation and practical methodology. The authors introduce a framework where **Reproducing Kernel Hilbert Spaces (RKHS)** and **quantum feature maps** are leveraged to solve SDE-related learning problems more efficiently.
-
-
-
-### 📐 Stochastic Differential Equations (SDEs)
-
-A classical SDE has the form:
+And the bias vector is given by $b$:
 
 $$
-d x_{t} = f(x_{t},t)\, dt + g(x_{t},t)\, dW_{t}
+b = \begin{pmatrix} 0.5 \\ -1.0 \end{pmatrix}
 $$
 
-- **Drift term**: \( f(x_t, t)\, dt \) → deterministic part  
-- **Diffusion term**: \( g(x_t, t)\, dW_t \) → stochastic part driven by Wiener process  
-- **Wiener process** \( W_t \) models Brownian motion  
+The transformation is defined by the equation $z = Wx + b$. Calculate the output vector $z$.
 
-Integral formulation:
+<br>
 
-$$
-X(t) = x_0 + \int_0^t f(X(s), s)\, ds + \int_0^t g(X(s), s)\, dW(s)
-$$
+### **Problem 2: Linear Algebra - Eigenvectors and Eigenvalues**
 
-The paper re-expresses SDEs as:
+Given the square matrix $A$:
 
 $$
-X(t) = x_0 + \int_0^t b(X(s))\, ds + \int_0^t \sigma(X(s))\, dW(s)
+A = \begin{pmatrix} 4 & -2 \\ 1 & 1 \end{pmatrix}
 $$
 
-where \( b \) is drift and \( \sigma \) is diffusion.
+Verify if the vector $v = \begin{pmatrix} 2 \\ 1 \end{pmatrix}$ is an eigenvector of matrix $A$. If it is, find the corresponding eigenvalue $\lambda$.
 
+<br>
 
-### 🧩 RKHS (Reproducing Kernel Hilbert Space)
+### **Problem 3: Calculus - Gradient Calculation**
 
-RKHS is central to the methodology.  
-Given a kernel \( k(x,y) \), RKHS provides a function space with inner product properties:
-
-$$
-f(x) = \langle f, k(\cdot, x) \rangle_{\mathcal{H}}
-$$
-
-- **Reproducing property**: function values can be represented as inner products  
-- **Representer theorem**: solutions to regularized optimization problems take the form
+Consider a simple loss function $L$ for a model with two parameters, $w_1$ and $w_2$. The function is defined as the squared error:
 
 $$
-f^{*}(x) = \sum_{i=1}^n \alpha_i k(x, x_i)
+L(w_1, w_2) = (w_1x_1 + w_2x_2 - y_{true})^2
 $$
 
-Thus, infinite-dimensional optimization is reduced to finite-dimensional.
+Given a single data point with inputs $x_1=2$, $x_2=3$ and a true label $y_{true}=7$. Calculate the gradient of the loss function, $\nabla L$, at the point where the weights are $w_1=1$ and $w_2=1$. Explain what the resulting gradient vector signifies in the context of gradient descent.
 
+<br>
 
-### ⚛️ Quantum Kernels
+### **Problem 4: Probability - Bayes' Theorem**
 
-The authors introduce **quantum feature maps** \( \phi(x) \) to define kernels:
+Imagine you are using a spam filter. Let $S$ be the event that an email is spam, and $W$ be the event that the email contains the word "winner". From historical data, you know the following probabilities:
 
-$$
-k(x,y) = |\langle \phi(x) | \phi(y) \rangle|^2
-$$
+- The probability that an email is spam: $P(S) = 0.2$
+- The probability that a spam email contains the word "winner": $P(W|S) = 0.8$
+- The probability that a non-spam email (ham) contains the word "winner": $P(W|S^c) = 0.01$ (where $S^c$ is the complement of $S$).
 
-Key points:
-- Quantum circuits generate embeddings into Hilbert space.  
-- Provides richer feature representations than classical kernels.  
-- Used to approximate solutions of SDE-related learning tasks.  
+An email arrives that contains the word "winner". What is the probability that this email is actually spam? That is, find $P(S|W)$.
 
+<br>
+<br>
 
-### 📝 Problem Formulation in the Paper
+---
 
-The target is learning a functional related to SDE solutions:
+<br>
+<br>
 
-$$
-\mathbb{E}\big[ \ell(X(t)) \big]
-$$
+## Solution Report: Assignment 1
 
-where \( \ell \) is some loss functional.  
+### **Solution to Problem 1: Linear Algebra - Neural Network Layer Transformation**
 
-They formulate the estimation problem in RKHS with a regularization term:
+**Objective:** To calculate the output $z$ of a neural network layer given by $z = Wx + b$.
 
-$$
-\min_{f \in \mathcal{H}} \sum_{i=1}^n \big( y_i - f(x_i) \big)^2 + \lambda \|f\|_{\mathcal{H}}^2
-$$
+**Given:**
+- Input vector $x = \begin{pmatrix} 2 \\ -1 \\ 3 \end{pmatrix}$
+- Weight matrix $W = \begin{pmatrix} 0.5 & 1.0 & -0.2 \\ -1.5 & 0.1 & 2.0 \end{pmatrix}$
+- Bias vector $b = \begin{pmatrix} 0.5 \\ -1.0 \end{pmatrix}$
 
-Using the Representer theorem:
+**Step 1: Calculate the matrix-vector product $Wx$.**
 
-$$
-f^{*}(x) = \sum_{i=1}^n \alpha_i k(x, x_i)
-$$
-
-Then quantum kernels replace classical \( k \).
-
-
-### 🔬 Contributions of the Paper
-
-1. **New Framework**: Quantum kernels for approximating functionals of SDEs.  
-2. **Generalization Bounds**: Theoretical guarantees on learning efficiency.  
-3. **Numerical Examples**: Show that quantum kernels outperform standard kernels on selected SDE tasks.  
-
-
-### 📊 Example: Linear SDE
-
-For a linear drift-diffusion system:
+The product $Wx$ is computed as follows:
 
 $$
-dX_t = aX_t dt + b dW_t
+Wx = \begin{pmatrix} 0.5 & 1.0 & -0.2 \\ -1.5 & 0.1 & 2.0 \end{pmatrix} \begin{pmatrix} 2 \\ -1 \\ 3 \end{pmatrix}
 $$
 
-The solution is:
-
 $$
-X_t = X_0 e^{at} + b \int_0^t e^{a(t-s)} dW_s
+Wx = \begin{pmatrix} (0.5 \times 2) + (1.0 \times -1) + (-0.2 \times 3) \\ (-1.5 \times 2) + (0.1 \times -1) + (2.0 \times 3) \end{pmatrix}
 $$
 
-The paper demonstrates how RKHS with quantum kernels can approximate expected values of such processes more efficiently.
+$$
+Wx = \begin{pmatrix} 1 - 1 - 0.6 \\ -3 - 0.1 + 6 \end{pmatrix} = \begin{pmatrix} -0.6 \\ 2.9 \end{pmatrix}
+$$
 
+**Step 2: Add the bias vector $b$.**
 
-### ✅ Conclusion
+Now, we add the result from Step 1 to the bias vector $b$:
 
-- **Quantum kernel methods** provide a powerful extension of RKHS techniques for SDE learning problems.  
-- They allow for **finite-dimensional, computationally tractable optimization** of problems that originate in infinite-dimensional function spaces.  
-- Potential applications include physics-informed machine learning, finance, and stochastic modeling.  
+$$
+z = Wx + b = \begin{pmatrix} -0.6 \\ 2.9 \end{pmatrix} + \begin{pmatrix} 0.5 \\ -1.0 \end{pmatrix}
+$$
+
+$$
+z = \begin{pmatrix} -0.6 + 0.5 \\ 2.9 - 1.0 \end{pmatrix} = \begin{pmatrix} -0.1 \\ 1.9 \end{pmatrix}
+$$
+
+**Final Answer:** The output vector of the layer is $z = \begin{pmatrix} -0.1 \\ 1.9 \end{pmatrix}$.
+
+<br>
+
+### **Solution to Problem 2: Linear Algebra - Eigenvectors and Eigenvalues**
+
+**Objective:** To verify if $v$ is an eigenvector of $A$ and find the corresponding eigenvalue $\lambda$.
+
+A vector $v$ is an eigenvector of a matrix $A$ if it satisfies the equation $Av = \lambda v$, where $\lambda$ is a scalar (the eigenvalue).
+
+**Given:**
+- Matrix $A = \begin{pmatrix} 4 & -2 \\ 1 & 1 \end{pmatrix}$
+- Vector $v = \begin{pmatrix} 2 \\ 1 \end{pmatrix}$
+
+**Step 1: Compute the product $Av$.**
+
+$$
+Av = \begin{pmatrix} 4 & -2 \\ 1 & 1 \end{pmatrix} \begin{pmatrix} 2 \\ 1 \end{pmatrix} = \begin{pmatrix} (4 \times 2) + (-2 \times 1) \\ (1 \times 2) + (1 \times 1) \end{pmatrix}
+$$
+
+$$
+Av = \begin{pmatrix} 8 - 2 \\ 2 + 1 \end{pmatrix} = \begin{pmatrix} 6 \\ 3 \end{pmatrix}
+$$
+
+**Step 2: Check if the result $Av$ is a scaled version of $v$.**
+
+We need to see if there is a scalar $\lambda$ such that $Av = \lambda v$.
+
+From Step 1, we have $Av = \begin{pmatrix} 6 \\ 3 \end{pmatrix}$.
+The original vector is $v = \begin{pmatrix} 2 \\ 1 \end{pmatrix}$.
+
+We can see that:
+
+$$
+\begin{pmatrix} 6 \\ 3 \end{pmatrix} = 3 \times \begin{pmatrix} 2 \\ 1 \end{pmatrix}
+$$
+
+This means $Av = 3v$.
+
+**Final Answer:** Yes, the vector $v = \begin{pmatrix} 2 \\ 1 \end{pmatrix}$ is an eigenvector of matrix $A$. The relationship $Av = \lambda v$ holds with the corresponding eigenvalue $\lambda = 3$.
+
+<br>
+
+### **Solution to Problem 3: Calculus - Gradient Calculation**
+
+**Objective:** To calculate the gradient $\nabla L$ of the loss function $L(w_1, w_2)$ at a specific point.
+
+**Given:**
+- Loss Function: $L(w_1, w_2) = (w_1x_1 + w_2x_2 - y_{true})^2$
+- Data Point: $x_1=2, x_2=3, y_{true}=7$
+- Point of Evaluation: $(w_1, w_2) = (1, 1)$
+
+**Step 1: Find the partial derivatives of $L$ with respect to $w_1$ and $w_2$.**
+
+We will use the chain rule. Let $u = w_1x_1 + w_2x_2 - y_{true}$, so $L = u^2$.
+The derivative of $L$ with respect to $u$ is $\frac{dL}{du} = 2u$.
+
+Partial derivative with respect to $w_1$:
+$$
+\frac{\partial L}{\partial w_1} = \frac{dL}{du} \cdot \frac{\partial u}{\partial w_1} = 2(w_1x_1 + w_2x_2 - y_{true}) \cdot (x_1)
+$$
+
+Partial derivative with respect to $w_2$:
+$$
+\frac{\partial L}{\partial w_2} = \frac{dL}{du} \cdot \frac{\partial u}{\partial w_2} = 2(w_1x_1 + w_2x_2 - y_{true}) \cdot (x_2)
+$$
+
+**Step 2: Evaluate the partial derivatives at the given point.**
+
+Substitute $x_1=2, x_2=3, y_{true}=7$ and $w_1=1, w_2=1$ into the expressions from Step 1.
+
+First, let's calculate the value of the term inside the parentheses:
+$$
+w_1x_1 + w_2x_2 - y_{true} = (1)(2) + (1)(3) - 7 = 2 + 3 - 7 = -2
+$$
+
+Now, evaluate the partial derivatives:
+$$
+\frac{\partial L}{\partial w_1} = 2(-2) \cdot (2) = -8
+$$
+
+$$
+\frac{\partial L}{\partial w_2} = 2(-2) \cdot (3) = -12
+$$
+
+**Step 3: Form the gradient vector.**
+
+The gradient $\nabla L$ is the vector of its partial derivatives:
+$$
+\nabla L = \left( \frac{\partial L}{\partial w_1}, \frac{\partial L}{\partial w_2} \right)
+$$
+
+**Final Answer:** The gradient at $(w_1, w_2) = (1, 1)$ is $\nabla L = (-8, -12)$.
+
+**Interpretation:** The gradient vector $\nabla L = (-8, -12)$ points in the direction of the steepest ascent of the loss function at the point $(1,1)$. In gradient descent, we want to *minimize* the loss. Therefore, we would update the weights by moving in the direction *opposite* to the gradient, i.e., in the direction of $(8, 12)$. This ensures we are taking a step towards a lower value of the loss function.
+
+<br>
+
+### **Solution to Problem 4: Probability - Bayes' Theorem**
+
+**Objective:** To calculate the posterior probability $P(S|W)$ using Bayes' Theorem.
+
+Bayes' Theorem is given by:
+$$
+P(S|W) = \frac{P(W|S)P(S)}{P(W)}
+$$
+
+**Given:**
+- Prior probability of spam: $P(S) = 0.2$
+- Likelihood of "winner" given spam: $P(W|S) = 0.8$
+- Likelihood of "winner" given not-spam: $P(W|S^c) = 0.01$
+
+**Step 1: Calculate the prior probability of not-spam, $P(S^c)$.**
+$$
+P(S^c) = 1 - P(S) = 1 - 0.2 = 0.8
+$$
+
+**Step 2: Calculate the total probability of observing the word "winner", $P(W)$.**
+We use the law of total probability:
+$$
+P(W) = P(W|S)P(S) + P(W|S^c)P(S^c)
+$$
+$$
+P(W) = (0.8)(0.2) + (0.01)(0.8)
+$$
+$$
+P(W) = 0.16 + 0.008 = 0.168
+$$
+This is the "evidence" term in Bayes' theorem.
+
+**Step 3: Apply Bayes' Theorem to find $P(S|W)$.**
+Now we have all the components needed:
+$$
+P(S|W) = \frac{P(W|S)P(S)}{P(W)} = \frac{(0.8)(0.2)}{0.168}
+$$
+
+$$
+P(S|W) = \frac{0.16}{0.168} \approx 0.95238
+$$
+
+**Final Answer:** The probability that an email is spam, given that it contains the word "winner", is approximately **95.24%**. This shows how observing evidence (the word "winner") can dramatically update our belief about whether an email is spam (from a prior of 20% to a posterior of over 95%).
